trying to make it work

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,14 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.5.2/css/rivet.min.css">
+    
+
     <title>Paws Pantry</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://unpkg.com/rivet-core@2.5.2/js/rivet.min.js"></script>
+    <script>Rivet.init();</script>
   </body>
 </html>
